--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@ Processed transport data by my teammate, parsing Google's My Maps JSON coordinat
           The combination of React's component-based architecture with powerful data visualization and task management features offers an intuitive experience for travelers who want to budget, organize, and visualize their journeys seamlessly.
         </p>
 
-        <p><a href="https://github.com/YOUR_GITHUB_USERNAME/trip-planner" target="_blank" rel="noopener" style="color:#00bfff; text-decoration: underline;">View on GitHub</a></p>
+        <p><a href="https://github.com/SohaibMohamad/trip-planner" target="_blank" rel="noopener" style="color:#00bfff; text-decoration: underline;">View on GitHub</a></p>
       </div>
       <div class="trip-planner-screenshots" id="tripScreens">
         <img src="MainMenu.png" alt="Main Menu Screenshot" />
@@ -555,8 +555,8 @@ Processed transport data by my teammate, parsing Google's My Maps JSON coordinat
         <h2>🌟 Freelance Experience</h2>
         <p>5-star rated freelancer on Mostaql.com with strong experience as a web designer and graphic designer. Skilled in building custom store makers, WordPress sites, and UI panels for clients.
 
-Received 3 positive reviews from recruiters praising communication, patience, and quality of work. more on my Mostaql portfolio</p>
-        <p><a href="https://mostaql.com/profile/YOUR_PROFILE" target="_blank" rel="noopener" style="color:#00bfff; text-decoration: underline;">View my Mostaql profile</a></p>
+Received 3 positive reviews from recruiters praising communication, patience, and quality of work. more on my Mostaql</p>
+        <p><a href="https://mostaql.com/u/SohaibMohamad" target="_blank" rel="noopener" style="color:#00bfff; text-decoration: underline;">View my Mostaql profile</a></p>
       </div>
     </div>
   </section>
@@ -599,6 +599,7 @@ Received 3 positive reviews from recruiters praising communication, patience, an
     <p>
       <a href="mailto:sohaib.mohamad.elsayed@gmail.com">Email</a> |
       <a href="https://github.com/SohaibMohamad" target="_blank" rel="noopener">GitHub</a> |
+      <a href="https://raw.githubusercontent.com/SohaibMohamad/your-repo-name/main/Sohyb%20Mohammad%20-%20CV.pdf" download>CV</a> |
       <a href="https://www.linkedin.com/in/sohaib-mohammad-982298217/" target="_blank" rel="noopener">LinkedIn</a>
     </p>
     <p>© 2025 Sohyb</p>
