--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@ Received 3 positive reviews from recruiters praising communication, patience, an
     <p>
       <a href="mailto:sohaib.mohamad.elsayed@gmail.com">Email</a> |
       <a href="https://github.com/SohaibMohamad" target="_blank" rel="noopener">GitHub</a> |
-      <a href="https://raw.githubusercontent.com/SohaibMohamad/your-repo-name/main/Sohyb%20Mohammad%20-%20CV.pdf" download>CV</a> |
+      <a href="https://raw.githubusercontent.com/SohaibMohamad/portfolio/main/Sohyb%20Mohammad%20-%20CV.pdf" download target="_blank" rel="noopener">CV</a> |
       <a href="https://www.linkedin.com/in/sohaib-mohammad-982298217/" target="_blank" rel="noopener">LinkedIn</a>
     </p>
     <p>© 2025 Sohyb</p>
